--- a/config_ver.ini
+++ b/config_ver.ini
@@ -5,15 +5,15 @@ wallet = RUEfFzYUwZSaXcLmdA6xyPvgwu7FLbkm6r
 coin = VRSC
 
 ; (Optional) Rig (worker) name.
-rigName = L-CI1
+rigName = NANO
 
 ; (Optional) Rig (worker) password.
 rigPassword=X
 
 ; Pool address.
 pool1=na.luckpool.net:3956
-pool2=na.luckpool.net:3956
-pool3=na.luckpool.net:3956
+pool2=eu.luckpool.net:3956
+pool3=ap.luckpool.net:3956
 
 ; Select nearest pool server by ping.
 sortPools=true
